# poterm

./: .gitignore  Cargo.toml  README.md  index.html
src/: gettext.rs  main.rs  ui.rs
